fix latex align

--- a/src/scss/block/embed.scss
+++ b/src/scss/block/embed.scss
@@ -10,3 +10,12 @@
 		svg { max-width: 100% !important; background: var(--color-bg-primary); }
 	}
 }
+
+.block.blockEmbed.isLatex {
+	> .content { border-radius: 0px; }
+
+	.katex-display { margin: 0px; text-align: inherit; }
+	.katex { line-height: 1.5em; text-align: inherit; }
+	.katex > .katex-html { white-space: normal; }
+	.katex .base { margin-top: 2px; margin-bottom: 2px; }
+}
